<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResetPasswordActivity"
    android:background="@color/whiteColor"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgResetPassLogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/txtOTPsent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgResetPassLogo"
        android:text="@string/enter_the_otp_send_to_the_registered_mail_address"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/resetPassOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtOTPsent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/reset_password_OTP"
        android:inputType="number"/>

    <EditText
        android:id="@+id/resetPassNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetPassOTP"
        android:hint="@string/reset_new"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="numberPassword"/>

    <EditText
        android:id="@+id/resetPassConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetPassNew"
        android:hint="@string/reset_confirm"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="numberPassword"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetPassConfirm"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_Submit"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/whiteColor"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_OTP_note"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="7dp"
        android:textStyle="italic"/>

    <RelativeLayout
        android:id="@+id/rlResetPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteColor">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>