<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarRegActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etRegName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:hint="@string/register_name"
            android:drawableStart="@drawable/ic_profile"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:hint="@string/register_email"
            android:drawableStart="@drawable/ic_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/etRegMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:hint="@string/register_mobile"
            android:maxLength="10"
            android:drawableStart="@drawable/ic_mobile"
            android:inputType="number"/>

        <EditText
            android:id="@+id/etRegAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:hint="@string/register_address"
            android:drawableStart="@drawable/ic_location"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:hint="@string/register_password"
            android:drawableStart="@drawable/ic_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/etRegConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:hint="@string/register_confirm_password"
            android:drawableStart="@drawable/ic_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/btn_Register"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/whiteColor"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlRegisterActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteColor">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>