<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutAppFragment"
    android:background="@color/whiteColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/faqAppLogo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="29sp"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/faqAppLogo"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textview1"
            android:text="@string/dev_name"
            android:textSize="13sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/blackColor"/>

        <TextView
            android:id="@+id/fineLine1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greyColor"
            android:layout_below="@id/textview2"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fineLine1"
            android:text="@string/description"
            android:textSize="18sp"
            android:textColor="@color/blackColor"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/textview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview3"
            android:text="@string/about_description"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/fineLine2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greyColor"
            android:layout_below="@id/textview4"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/fineLine3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greyColor"
            android:layout_below="@id/fineLine2"
            android:layout_marginTop="3dp"/>

        <TextView
            android:id="@+id/textview5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fineLine3"
            android:text="Technical Details: "
            android:textSize="18sp"
            android:textColor="@color/blackColor"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/textview6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview5"
            android:text="@string/online_database"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/textview7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview6"
            android:text="@string/rest_API"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/textview8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview7"
            android:text="@string/offline_database"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/textview9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview8"
            android:text="@string/multithreading"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/fineLine4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greyColor"
            android:layout_below="@id/textview9"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:weightSum="4"
            android:layout_marginTop="5dp"
            android:layout_below="@id/fineLine4">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="23dp"
                android:layout_weight="0.5"
                android:src="@drawable/ic_info"
                android:layout_gravity="center"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="1dp"
                    android:text="@string/feedback"
                    android:textColor="@color/blackColor"
                    android:textSize="16sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/sendEmail1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/btn_email"
                android:textSize="16sp"
                android:textColor="@color/whiteColor"
                android:background="@color/colorPrimary"/>

        </LinearLayout>

        <TextView
            android:id="@+id/fineLine5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/greyColor"
            android:layout_below="@id/email"
            android:layout_marginTop="5dp"/>

    </RelativeLayout>

</ScrollView>